@@ -313,10 +313,10 @@ void Barge_object::gather
 				continue;
 			Shape_info& info = obj->get_info();
 					// Above barge, within 5-tiles up?
-			bool isbarge = info.is_barge_part() || !info.get_weight();
+			bool isbarge = info.is_barge_part() /*+++ || !info.get_weight() */;
 			if (t.tz + info.get_3d_height() > lift && 
 			    ((isbarge && t.tz >= lift - 1) ||
-				(t.tz < lift + 5 && t.tz >= lift + 1)))
+				(t.tz < lift + 5 && t.tz >= lift /*+++ + 1 */)))
 				{
 				objects.push_back(obj);
 				if (si)
@@ -558,7 +558,6 @@ void Barge_object::done
 	(
 	)
 	{
-	gathered = false;		// Clear for next time.
 	static int norecurse = 0;	// Don't recurse on the code below.
 	if (norecurse > 0)
 		return;
